Deque, string code points